--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>JS</title>
   </head>
   <body>
-    <script src="for.js"></script>
+    <!-- <script src="for.js"></script> -->
+    <script src="while.js"></script>
   </body>
 </html>
